python/src/rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec: 
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
      name: http
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: amqp
